ROS-Camera/log/build_2022-06-29_13-05-34/oakd/stderr.log
  File "/home/mcpslab/Desktop/ROS-Tutorials/Node-Test/install/oakd/lib/python3.8/site-packages/oakd/oakd_imu_function.py", line 61
    count = 0
    ^
SyntaxError: invalid syntax

